# bpf-playground

./: README.md  go.mod
bpftrace/: bpftrace_l_060800  cmd.sh
cilium_ebpf/: README.md  go.mod
cilium_ebpf/kprobe/: kprobe.c  kprobe_bpfel.go
cilium_ebpf_cgroup/: Makefile  README.md  attach.go  bpf.c  detach.go  go.mod
cilium_ebpf_kprobe/: go.mod
cilium_ebpf_kprobe/kprobe/: kprobe_bpfeb.go  main.go
filter/raw_socket/: Makefile  README.md  bpfLoader.c  packetCounter.c
kprobe/: kprobe.go
kprobe/CO-RE/connect/: .gitignore  Makefile  connect_tcp.bpf.c  connect_tcp.c
kprobe/bcc/: README.md  kretprobe.go
lsm/: .gitignore  README.md  block_unshare.c
lsm/nice/: Makefile  block_nice.bpf.c  block_nice.c
lsm/unshare/: Makefile  README.md  block_unshare.bpf.c  block_unshare.c  vmlinux.h
pin_get_map/: Makefile  README.md  get_map_from_bpffs.c  pin_map_to_bpffs.c
seccomp/block/: Makefile  README.md  blockwrite.c
tc/bpf_cls/: Makefile  README.md  attach.c  captureHttp.c  clsf.c  detach.c
tc/tc_firewall/: Cargo.toml  build.rs
tc/tc_firewall/src/: main.rs
tc/tc_firewall/src/bpf/: tc_fw.bpf.c
tracepoint/: .gitignore  README.md  tracepoint.go
tracepoint/CO-RE/: Makefile  process_lc.bpf.c  process_lc.c  process_lc.h
uprobe/: README.md  helloworld.go  uprobe.go  uretprobe.go
xdp/droptcp/: Makefile  README.md  attach.sh  droptcp.c
