[package]
name = "tc_firewall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
libbpf-rs = "0.20.1"
libc = "0.2.142"
nix = { version = "0.26", default-features = false, features = ["net", "user"] }

[build-dependencies]
libbpf-cargo = { version = "0.20.1" }
